# knfk_fog

./: README.md  krzywe_lissajous.ipynb  lissajous_wiktoriasia  lissajous_wiktoriasia.py  pyproject.toml
Janchh/: krzywa.ipynb  pyproject.toml  wyniki.txt
Janchh/kod/: krzywa.ipynb
Janchh/krzywe_lissajous/: krzywa.ipynb
knfk_fale/: main.py
knfk_fog/: pyproject.toml
knfk_fog/src/: krzywe_lissajous.ipynb
mjm/: waves.ipynb
