[tool.poetry]
name = "knfk-fog"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "knfk_fog"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
jupyterlab = "^3.5.0"
tqdm = "^4.64.1"
notebook = "^6.5.2"
ipywidgets = "^8.0.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
