[tool.poetry]
name = "Krzywa Lissajous"
version = "0.1.0"
description = ""
authors = ["Janchh <01169737@pw.edu.pl>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.8"
pyplot-themes = "^0.2.2"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
