[tool.poetry]
name = "krzywe_lissajous"
version = "0.1.0"
description = ""
authors = ["Janchh"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
ipywidgets = "^7.6.5"
jupyterlab = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
